--- a/Chart.yaml
+++ b/Chart.yaml
@@ -1,16 +1,19 @@
+# This chart is deprecated and moved to https://github.com/jenkinsci/helm-charts
 apiVersion: v1
-appVersion: 0.3.1
-description: A Helm chart for Kubernetes Jenkins Operator
-name: jenkins-operator
-version: 0.3.1
-icon: https://wiki.jenkins-ci.org/download/attachments/2916393/logo.png
-keywords:
-- jenkins
-- testing
-home: https://github.com/samsung-cnct/jenkins-operator
+name: jenkins
+home: https://jenkins.io/
+version: 2.5.4
+appVersion: lts
+description: DEPRECATED - Open source continuous integration server. It supports multiple SCM tools
+  including CVS, Subversion and Git. It can execute Apache Ant and Apache Maven-based
+  projects as well as arbitrary scripts.
 sources:
-- https://github.com/samsung-cnct/jenkins-operator
 - https://github.com/jenkinsci/jenkins
-maintainers:
-- name: maratoid
-  email: maratoid@gmail.com
+- https://github.com/jenkinsci/docker-jnlp-slave
+- https://github.com/maorfr/kube-tasks
+- https://github.com/jenkinsci/configuration-as-code-plugin
+icon: https://wiki.jenkins-ci.org/download/attachments/2916393/logo.png
+# The stable/jenkins chart is deprecated and no longer maintained.
+# It was moved to https://github.com/jenkinsci/helm-charts
+# For details on deprecation, including how to un-deprecate a chart see the PROCESSES.md file.
+deprecated: true
